fix bugs in chat input spacing

--- a/src/components/_spacing.scss
+++ b/src/components/_spacing.scss
@@ -114,14 +114,24 @@
 [class*="channelTextArea-"] {
   background-color: transparent;
   border-radius: 12px;
-  height: 52px;
   width: 100%;
-  margin-bottom: 10px;
-  margin-top: 6px;
-  [class*="scrollableContainer-"] {
-    padding: 3px 0;
-    border-radius: 15px;
+  margin-top: 10px;
+  margin-bottom: auto;
+  [class*="attachedBars-"] {
     background-color: var(--background-secondary-alt);
+    border-bottom: 1px solid var(--line-highlight);
+    [class*="replyBar-"] {
+      background-color: var(--background-secondary-alt);
+    }
+  }
+  [class*="scrollableContainer-"] {
+    padding-top: 6px;
+    border-radius: 12px;
+    height: 48px;
+    background-color: var(--background-secondary-alt);
+    &[class*="hasConnectedBar-"] {
+      border-radius: 0px 0px 12px 12px;
+    }
   }
   &[class*="channelTextAreaDisabled-"] {
     [class*="scrollableContainer-"] {
@@ -134,8 +144,7 @@
   position: relative;
   font-size: .8rem;
   text-align: center;
-  margin: -4px 0 0 0;
-  padding: 0 5px 5px 0;
+  margin: 6px 0 0 0;
   height: 14px;
   left: 0;
   color: var(--text-muted);
@@ -166,6 +175,13 @@
   justify-content: space-between;
   padding: 0;
   margin-right: 10px;
+  margin-bottom: 10px;
+  >div {
+    [class*="wrapper-"] {
+      margin: 9px 0 0 0;
+      background-color: var(--background-secondary);
+    }
+  }
 }
 
 section[class*="headerBar-"] {
